# ad-ext

./: .clang-format  .clang-tidy  .gitignore  .gitignore.swp  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  a.sh  backward  build.sh  forward  inference_time.csv  log  pyproject.toml  resnet_torch_mlir.txt  runtest.sh  test.py
.github/workflows/: build.yaml  clang-format.yaml  ubuntu.yml
AILang/: CMakeLists.txt
AILang/python/: setup.py
AILang/python/ailang/: __init__.py  ast_converter.py  core.py  prims.py  utils.py
AILang/python/ailang/ffi/: __init__.py
AILang/python/ailang/nn/: __init__.py
AILang/python/ailang/nn/layers/: Sequential.py  __init__.py  activations.py  base.py  convolution.py  linear.py  normalization.py
AILang/src/csrc/: allocator.cpp  array.cpp  device.cpp  dtype.cpp  graph.cpp  ops.cpp  primitive.cpp  trace.cpp  transformation.cpp
AILang/src/csrc/ast/: ast.cpp  ast_binding.cpp  ast_node.cpp  ir_building.cpp  node_contract.cpp  type_contract.cpp  type_infer.cpp  visitor.cpp
AILang/src/csrc/backend/: broadcast.cpp  naive_prims.cpp  reduce.cpp  shape_infer_contract.cpp
AILang/src/csrc/ffi/: array.cpp  ops.cpp  pytensor.cpp  transforms.cpp
AILang/src/csrc/ir/: block.cpp  container.cpp  function.cpp  graph.cpp  ir_binding.cpp  ir_visitor.cpp  linklist.cpp  literal.cpp  node.cpp  symbol.cpp  tensor.cpp  type.cpp  use.cpp  value.cpp
AILang/src/csrc/pass/: autodiff.cpp  iree_lowering.cpp  pass.cpp  stablehlo_lowering.cpp  utils.cpp
AILang/src/csrc/symbol/: symbol.cpp
AILang/src/csrc/tensor/: tensor.cpp
AILang/src/csrc/utils/: binding.cpp  logger.cpp  utils.cpp
AILang/src/include/: allocator.h  array.h  binary.h  compute.h  device.h  dtype.h  graph.h  ops.h  primitive.h  trace.h  transformation.h  unary.h
AILang/src/include/ast/: ast.h  ast_binding.h  ast_node.h  ir_building.h  node_contract.h  type_contract.h  type_infer.h  visitor.h
AILang/src/include/backend/: binary_op.h  reduce.h  shape_infer_contract.h  unary_op.h
AILang/src/include/backend/common/: Broadcast.h  compute.h  conv.h  reduce.h
AILang/src/include/backend/onednn/: common.h
AILang/src/include/ffi/: array.h  ops.h  pytensor.h  transforms.h
AILang/src/include/ir/: block.h  container.h  function.h  graph.h  ir_binding.h  ir_visitor.h  linklist.h  literal.h  node.h  symbol.h  tensor.h  type.h  use.h  value.h
AILang/src/include/pass/: autodiff.h  iree_lowering.h  pass.h  stablehlo_lowering.h
AILang/src/include/symbol/: symbol.h
AILang/src/include/tensor/: tensor.h
AILang/src/include/utils/: binding.h  logger.h  utils.h
artifacts/: README.md
artifacts/criterion1/: testconvolution.py  testmatmul.py  testsoftmax.py
artifacts/criterion3/: attention.py  attention_jit.py  lstm.py  lstm_jit.py  resnet.py  resnet_jit.py
artifacts/criterion4/: attention_backward.py  lstm_backward.py  resnet_backward.py
artifacts/scripts/: criterion1.sh  criterion3.sh  criterion4.sh  reproduce.sh
artifacts/test_ad/: ad.sh  test_attention.py  test_lstm.py  test_resnet.py
artifacts/test_function/: test_conv.py  test_matmul.py  test_softmax.py
artifacts/test_graph/: graph.sh  test_attention_eager.py  test_attention_graph.py  test_lstm_eager.py  test_lstm_graph.py  test_resnet_eager.py  test_resnet_graph.py
artifacts/utils/: utils.py
baseline/lstm/: lstm_pytorch.py  lstm_pytorch_export.py  lstm_pytorch_unroll.py
build_tools/: Dockerfile  README.md  build.sh  build_iree.sh  dockerfile
cmake/: llvm-hash.txt
docs/: architecture.md  jit.md  register_operator.md
examples/: basic_block.py  lstm.py  resnet.py  tmp.txt  while.py
experiment_artifacts/: lstm.py  resnet.py
include/: CMakeLists.txt
include/ailang/: CMakeLists.txt
include/ailang/AST/: AST.h  ASTNode.h  ASTVisitor.h  IRBuilding.h  TypeInfer.h
include/ailang/Backend/: binary_op.h
include/ailang/Core/: Allocator.h  Array.h  Device.h  Dtype.h  Graph.h  Ops.h  Primitive.h  Trace.h  Transformation.h
include/ailang/IR/: Block.h  Container.h  Function.h  Graph.h  IRVisitor.h  Literal.h  Node.h  NodeContract.h  Symbol.h  Tensor.h  Type.h  TypeContract.h  Use.h  Value.h
include/ailang/Transforms/: Autodiff.h  Pass.h  StablehloConversion.h  Visualize.h  utils.h
lib/: CMakeLists.txt
lib/AST/: AST.cpp  ASTNode.cpp  ASTVisitor.cpp  CMakeLists.txt  IRBuilding.cpp  NodeContract.cpp  TypeContract.cpp  TypeInfer.cpp  test.cpp
lib/Backend/: shape_infer_contract.cpp
lib/Core/: Allocator.cpp  Array.cpp  CMakeLists.txt  Device.cpp  Dtype.cpp  Graph.cpp  Ops.cpp  Primitive.cpp  Trace.cpp  Transformation.cpp
lib/IR/: Block.cpp  CMakeLists.txt  Container.cpp  Function.cpp  Graph.cpp  IRVisitor.cpp  Linklist.cpp  Literal.cpp  Node.cpp  Symbol.cpp  Tensor.cpp  Type.cpp  Use.cpp  Value.cpp
lib/Transforms/: Autodiff.cpp  CMakeLists.txt  Pass.cpp  StablehloConversion.cpp  Visualize.cpp  utils.cpp
lib/Utils/: Logger.cpp  Utils.cpp
python/: __init__.py  pyproject.toml  requirement.txt  setup.py
python/ailang/: __init__.py  ast_converter.py  core.py  prims.py  standard.py  transform.py
python/ailang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/ailang/ffi/: __init__.py
python/ailang/nn/: __init__.py  common.py
python/ailang/nn/layers/: __init__.py  activations.py  base.py  convolution.py  linear.py  lstmcell.py  normalization.py  pooling.py
python/ailang/nn/network/: lstm.py  resnet.py
python/ailang/prim/: __init__.py  primop.py
python/ailang/random/: __init__.py  randinit.py
python/ailang/src/: main.cpp
python/ailang/standard/: __init__.py  activations.py  arith.py  common.py  reduce.py  view.py
python/src/: core.cpp  ir.cpp  main.cpp  ops.cpp
server/: README.md  backward  forward  main.py  main_backup.py  postprocessing.py
tests/: log  test.py  test_array.py  test_ast.py  test_attention.py  test_attention_backward.py  test_autograd.py  test_control_flow.py  test_grad.py  test_ir.py  test_iree.py  test_jit.py  test_lstm.py  test_lstm_grad.py  test_nn.py  test_nn_grad.py  test_op.py  test_resnet.py  test_resnet_backward.py  test_tmp.py  test_typeinfer.py
(+42 files in other folders)
